--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
     <div class="vd-memories">
         <div class="memo-cnt">
-            <div class="text-right memo-txt w">Our <span class="w-bar">Memories</span></div>
+            <div class="text-center memo-txt w">Our <span class="w-bar">Memories</span></div>
         </div>
         <div class="memo-gallery">
             <div class="gal-pic g-sm" style="background-image: url('./assets/p1.png');"></div>
