--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     </div>
 
     <div class="vd-roots">
+        <img src="./assets/photos/roots.png" class="roots-img" alt="">
         <div class="roots-cnt">
+            
             <h1 class="text-left roots-txt w">Our <span class="w-bar">Roots</span></h1>
             <h4 class="text-justify roots-sub w">When our founder, Mr. Lokendra Upadhyay, established Vedansh in 2006, his
                 goal was to raise the bar in the electrical engineering and contracting industry
@@ -93,10 +95,10 @@
     </div>
 
     <div class="vd-client">
+        <img src="./assets/photos/clients.png" class="client-img" alt="">
         <div class="client-cnt">
             <h1 class="text-center client-txt w">Great Bussiness, Great <span class="w-bar">Friendship</span></h1>
             <h4 class="text-center client-sub w">Our team and our clients make great things happen together.</h4>
-        </div>
         <div class="client-cards">
                 <div class="vd-card"><img src="./assets/clients/adani.png" alt="adani"></div>
                 <div class="vd-card"><img src="./assets/clients/lnt.png"   alt="l&t"></div>
@@ -110,6 +112,7 @@
                 <div class="vd-card"><img src="./assets/clients/proz.png" alt="prozeal"></div>
                 <div class="vd-card"><img src="./assets/clients/torp.png" alt="torrent power"></div>
                 <div class="vd-card"><img src="./assets/clients/vdnta.png" alt="vedanta"></div>
+        </div>
         </div>
     </div>
 
@@ -186,7 +189,7 @@
 
     <div class="vd-footer">
         <div class="foot-cnt">
-            <h1 class="text-left foot-txt p">Reach <span class="s-bar">Us</span></h1>
+            <h1 class="text-left foot-txt w">Reach <span class="w-bar">Us</span></h1>
         </div>
         <div class="foot-container">
         <div class="foot-info">
@@ -195,12 +198,9 @@
             <div class="info-icon" style="background-image: url('./assets/icons/mail.svg');"></div><div class="info-txt">vedansh.infragroup@gmail.com</div>
         </div>
         <div class="foot-links">
-            <div class="foot-link">Home</div>
-            <div class="foot-link">Services</div>
-            <div class="foot-link">Clients</div>
-            <div class="foot-link">Careers</div>
-            <div class="foot-link">Contact</div>
-            <div class="foot-link">About</div>
+                <a href="http://discovery.ariba.com/profile/AN01399503535">
+                <img alt="View VEDANSH INFRA SERVICES PRIVATE LIMITED profile on Ariba Discovery" class="foot-link" src="https://service.ariba.com/an/p/Ariba/badge_245x100.jpg">
+                </a>
         </div>
         </div>
     </div>
