--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
     <div class="vd-head">
         <img src="./assets/photos/bulb.svg" alt="" class="vd-bulb">
-        <div>
+        <img src="./assets/photos/detailed.svg" class="vd-logo" alt="">
+        <div style="position: relative; top: -4vw;">
             <h1 class="text-center head-txt p">Growing <span class="s-bar">Together</span></h1>
             <h4 class="text-center head-sub p">At Vedansh, you tell your dream, <br> and our team of experts will turn it into reality.</h4>
         </div>
-        <img src="./assets/photos/detailed.svg" class="vd-logo" alt="">
+        
     </div>
 
     <div class="vd-roots">
