--- a/index.html
+++ b/index.html
@@ -77,26 +77,26 @@
 
     <div class="row vd-servs">
             <div class="card text-center serv-card">
-                <div class="card-img serv-icon" style="background-image: url(./assets/serv-pe.svg);"></div>
+                <div class="card-img serv-icon" style="background-image: url(./assets/services/serv-pe.svg);"></div>
                 <div class="card-body serv-name">Plant Erection</div>
             </div>
             <div class="card text-center serv-card">
-                <div class="card-img serv-icon" style="background-image: url(./assets/serv-pm.svg);"></div>
+                <div class="card-img serv-icon" style="background-image: url(./assets/services/serv-pm.svg);"></div>
                 <div class="card-body serv-name">Project Management</div>
             </div>
             <div class="card text-center serv-card">
-                <div class="card-img serv-icon" style="background-image: url(./assets/serv-ep.svg);"></div>
+                <div class="card-img serv-icon" style="background-image: url(./assets/services/serv-ep.svg);"></div>
                 <div class="card-body serv-name">Engineering,<br>
                     Procurement<br>
                     & Commissioning</div>
             </div>
             <div class="card text-center serv-card">
-                <div class="card-img serv-icon" style="background-image: url(./assets/serv-tm.svg);"></div>
+                <div class="card-img serv-icon" style="background-image: url(./assets/services/serv-tm.svg);"></div>
                 <div class="card-body serv-name">Testing &
                    <br> Commissioning</div>
             </div>
             <div class="card text-center serv-card">
-                <div class="card-img serv-icon" style="background-image: url(./assets/serv-om.svg);"></div>
+                <div class="card-img serv-icon" style="background-image: url(./assets/services/serv-om.svg);"></div>
                 <div class="card-body serv-name">Operation &
                    <br> Maintainance</div>
             </div>
