--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vedansh</title>
+    <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="vedansh-styling.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -17,9 +18,9 @@
     <div class="vd-navbar" id="navbar">
         <img src="./assets/logo.svg" id="navbar-logo">
         <div id="navbar-links">
-            <p>Home</p>
             <p>Services</p>
             <p>Clients</p>
+            <p>Contact Us</p>
             <p>About</p>
         </div>
     </div>
@@ -37,9 +38,7 @@
     </div>
 
     <div class="vd-head">
-        <img src="./assets/photos/bulb.svg" alt="" class="vd-bulb">
         <img src="./assets/photos/detailed.svg" class="vd-logo" alt="">
-        <div class="a-circle c-l"></div><div class="a-circle c-r"></div>
         <div style="position: relative; top: -4vw;">
             <h1 class="text-center head-txt p">Growing <span class="s-bar">Together</span></h1>
             <h4 class="text-center head-sub p">At Vedansh, you tell your dream, <br> and our team of experts will turn it into reality.</h4>
@@ -203,7 +202,7 @@
         <div class="foot-info">
             <div class="info-icon" style="background-image: url('./assets/icons/pin.svg');"></div><div class="info-txt">Vedansh Infra Services Pvt. Ltd. F-16, Block II, Ambe Market,Near Rituraj Vatika, Chittorgarh, Rajasthan - 312001</div>
             <div class="info-icon" style="background-image: url('./assets/icons/telephone.svg');"></div><div class="info-txt">Phone No. 01472-241007</div>
-            <div class="info-icon" style="background-image: url('./assets/icons/mail.svg');"></div><div class="info-txt">vedansh.infragroup@gmail.com</div>
+            <div class="info-icon" style="background-image: url('./assets/icons/mail.svg');"></div><div class="info-txt"><a href="mailto:vedansh.infragroup@gmail.com">vedansh.infragroup@gmail.com</a></div>
         </div>
         <div class="foot-links">
                 <a href="http://discovery.ariba.com/profile/AN01399503535">
