Added Sub Pages

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="vd-navbar" id="navbar">
         <img src="./assets/logo.svg" id="navbar-logo">
         <div id="navbar-links">
-            <p>Services</p>
-            <p>Clients</p>
-            <p>Contact Us</p>
-            <p>About</p>
+            <p><a href="services.html">Services</a></p>
+            <p><a href="services.html">Clients</a></p>
+            <p><a href="services.html">Contact Us</a></p>
+            <p><a href="services.html">About</a></p>
         </div>
     </div>
 
