--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
             <div class="info-icon" style="background-image: url('./assets/icons/mail.svg');"></div><div class="info-txt"><a href="mailto:vedansh.infragroup@gmail.com">vedansh.infragroup@gmail.com</a></div>
         </div>
         <div class="foot-links">
+            <a href="">
+            <img alt="View VEDANSH INFRA SERVICES PRIVATE LIMITED Profile" class="foot-link" src="./assets/profile.png">
+            </a>
+        </div>
+        <div class="foot-links">
                 <a href="http://discovery.ariba.com/profile/AN01399503535">
                 <img alt="View VEDANSH INFRA SERVICES PRIVATE LIMITED profile on Ariba Discovery" class="foot-link" src="https://service.ariba.com/an/p/Ariba/badge_245x100.jpg">
                 </a>
