--- a/services.html
+++ b/services.html
@@ -24,10 +24,39 @@
             <p><a href="about.html">About</a></p>
         </div>
     </div>
-
+    
     <div class="vd-main">
-        <h1 class="text-center p">Coming Soon</h1>
+      <div class="s-main1">
+        <h1 class="main-txt p">Our Services</h1>
     </div>
+    <div class="main2">
+        <img src="./assets/services.svg" class="main-illus" alt="Enginners on Site">
+        <img src="./assets/round-shadow.svg" alt="" class="main2-shadow">
+    </div>
+    </div>
+
+    <div class="vd-footer">
+      <div class="foot-cnt">
+          <h1 class="text-left foot-txt w">Reach <span class="w-bar">Us</span></h1>
+      </div>
+      <div class="foot-container">
+      <div class="foot-info">
+          <div class="info-icon" style="background-image: url('./assets/icons/pin.svg');"></div><div class="info-txt">Vedansh Infra Services Pvt. Ltd. F-16, Block II, Ambe Market,Near Rituraj Vatika, Chittorgarh, Rajasthan - 312001</div>
+          <div class="info-icon" style="background-image: url('./assets/icons/telephone.svg');"></div><div class="info-txt">Phone No. 01472-241007</div>
+          <div class="info-icon" style="background-image: url('./assets/icons/mail.svg');"></div><div class="info-txt"><a href="mailto:vedansh.infragroup@gmail.com">vedansh.infragroup@gmail.com</a></div>
+      </div>
+      <div class="foot-links">
+          <a href="">
+          <img alt="View VEDANSH INFRA SERVICES PRIVATE LIMITED Profile" class="foot-link" src="./assets/profile.png">
+          </a>
+      </div>
+      <div class="foot-links">
+              <a href="http://discovery.ariba.com/profile/AN01399503535">
+              <img alt="View VEDANSH INFRA SERVICES PRIVATE LIMITED profile on Ariba Discovery" class="foot-link" src="https://service.ariba.com/an/p/Ariba/badge_245x100.jpg">
+              </a>
+      </div>
+      </div>
+  </div>
 
 
 <script>
