--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="vedansh-styling.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,500;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styleS.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="main.js"></script>
@@ -25,15 +25,15 @@
         </div>
     </div>
     
-    <div class="vd-main">
-      <div class="main1">
-        <h1 class="main-txt p">Our Services</h1>
-        <p class="sub p">Today, we at Vedansh aim to be a one-stop shop for all our customers’ electrical engineering and contracting needs, by offering EPC, Project Management, Testing and Commissioning, Plant erection and Operation and Management services. Once you hand over a project to us, you can sit back and watch your vision come to life.</p>
-        <button class="take-tour w">View All</button>
+    <div class="s-main">
+      <div class="smain1">
+        <h1 class="smain-txt p">Our Services</h1>
+        <p class="ssub p">Today, we at Vedansh aim to be a one-stop shop for all our customers’ electrical engineering and contracting needs, by offering EPC, Project Management, Testing and Commissioning, Plant erection and Operation and Management services. Once you hand over a project to us, you can sit back and watch your vision come to life.</p>
+        <button class="view-all w">View All</button>
     </div>
-    <div class="main2">
-        <img src="./assets/services.svg" class="main-illus" alt="Enginners on Site">
-        <img src="./assets/round-shadow.svg" alt="" class="main2-shadow">
+    <div class="smain2">
+        <img src="./assets/services.svg" class="smain-illus" alt="Enginners on Site">
+        <img src="./assets/round-shadow.svg" alt="" class="smain2-shadow">
     </div>
     </div>
 
