--- a/services.html
+++ b/services.html
@@ -37,6 +37,14 @@
     </div>
     </div>
 
+    <div class="s-container">
+      <div class="s-card"></div>
+      <div class="s-card"></div>
+      <div class="s-card"></div>
+      <div class="s-card"></div>
+      <div class="s-card"></div>
+    </div>
+
     <div class="vd-footer">
       <div class="foot-cnt">
           <h1 class="text-left foot-txt w">Reach <span class="w-bar">Us</span></h1>
