--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,56 @@
         </div>
     </div>
 
-    <div class="vd-main">
-        <h1 class="text-center p">Coming Soon</h1>
+    
+    <div class="vd-contact">
+      <h1 class="text-center main-txt p">Contact Us</h1>
+  </div>
+  <div class="vd-form">
+    <form class="vf">
+      <label for="fname">First Name:</label><br>
+      <input type="text" id="fname" name="fname"><br><br>
+      <label for="lname">Last Name:</label><br>
+      <input type="text" id="lname" name="lname"><br><br>
+      <label for="email">Email</label><br>
+      <input type="email" id="email" name="email"><br><br>
+      <label for="number">Phone Number</label><br>
+      <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"><br><br>
+      <label for="message">Message</label><br>
+      <textarea rows="4" cols="30" name="comment" >
+      </textarea>
+      <input type="submit" value="Submit">
+    </form>
+    <div class="location">
+      <h2 class="p">Location</h2>
+      
+      <div class="glocation">
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675128.419363898!2d73.94609821612966!3d25.902613873294865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3968a19022c32229%3A0x844f13024d31c092!2sVedansh%20Infra%20Services%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1593797143386!5m2!1sen!2sin" width="700" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+     </div>
+    </div> 
+  </div>
+  
+  <div class="vd-footer">
+    <div class="foot-cnt">
+        <h1 class="text-left foot-txt w">Reach <span class="w-bar">Us</span></h1>
     </div>
+    <div class="foot-container">
+    <div class="foot-info">
+        <div class="info-icon" style="background-image: url('./assets/icons/pin.svg');"></div><div class="info-txt">Vedansh Infra Services Pvt. Ltd. F-16, Block II, Ambe Market,Near Rituraj Vatika, Chittorgarh, Rajasthan - 312001</div>
+        <div class="info-icon" style="background-image: url('./assets/icons/telephone.svg');"></div><div class="info-txt">Phone No. 01472-241007</div>
+        <div class="info-icon" style="background-image: url('./assets/icons/mail.svg');"></div><div class="info-txt"><a href="mailto:vedansh.infragroup@gmail.com">vedansh.infragroup@gmail.com</a></div>
+    </div>
+    <div class="foot-links">
+        <a href="">
+        <img alt="View VEDANSH INFRA SERVICES PRIVATE LIMITED Profile" class="foot-link" src="./assets/profile.png">
+        </a>
+    </div>
+    <div class="foot-links">
+            <a href="http://discovery.ariba.com/profile/AN01399503535">
+            <img alt="View VEDANSH INFRA SERVICES PRIVATE LIMITED profile on Ariba Discovery" class="foot-link" src="https://service.ariba.com/an/p/Ariba/badge_245x100.jpg">
+            </a>
+    </div>
+    </div>
+</div>
 
 
 <script>
