--- a/clients.html
+++ b/clients.html
@@ -25,8 +25,8 @@
         </div>
     </div>
 
-    <div class="vd-main">
-        <h1 class="text-center p">Coming Soon</h1>
+    <div class="cl-main">
+      
     </div>
 
 
