--- a/clients.html
+++ b/clients.html
@@ -35,14 +35,14 @@
         <img src="./assets/darkcard.png" alt="" class="cl-primg">
         <div class="cl-detail">
         <h3 class="text-left p head-sub">fgdhdhhgfhfthdfbdsbsddsgsdshdfhd</h3>
-        <button class="cl-view take-tour">VIEW</button>
+        <button class="cl-view">VIEW</button>
       </div>
     </div>
       <div class="cl-prcard">
         <img src="./assets/lightcard.png" alt="" class="cl-primg">
         <div class="cl-detail">
         <h3 class="text-left p head-sub">fgdhdhhgfhfthdfbdsbsddsgsdshdfhd</h3>
-        <button class="cl-view take-tour">VIEW</button>
+        <button class="cl-view">VIEW</button>
       </div>
       </div>
       <div class="cl-prcard">
@@ -50,28 +50,28 @@
         
         <div class="cl-detail">
           <h3 class="text-left p head-sub">fgdhdhhgfhfthdfbdsbsddsgsdshdfhd</h3>
-          <button class="cl-view take-tour">VIEW</button>
+          <button class="cl-view">VIEW</button>
         </div>
       </div>
       <div class="cl-prcard">
         <img src="./assets/lightcard.png" alt="" class="cl-primg">
         <div class="cl-detail">
           <h3 class="text-left p head-sub">fgdhdhhgfhfthdfbdsbsddsgsdshdfhd</h3>
-          <button class="cl-view take-tour">VIEW</button>
+          <button class="cl-view">VIEW</button>
         </div>
       </div>
       <div class="cl-prcard">
         <img src="./assets/darkcard.png" alt="" class="cl-primg">
         <div class="cl-detail">
           <h3 class="text-left p head-sub">fgdhdhhgfhfthdfbdsbsddsgsdshdfhd</h3>
-          <button class="cl-view take-tour">VIEW</button>
+          <button class="cl-view">VIEW</button>
         </div>
       </div>
       <div class="cl-prcard">
         <img src="./assets/lightcard.png" alt="" class="cl-primg">
         <div class="cl-detail">
           <h3 class="text-left p head-sub">fgdhdhhgfhfthdfbdsbsddsgsdshdfhd</h3>
-          <button class="cl-view take-tour">VIEW</button>
+          <button class="cl-view">VIEW</button>
         </div>
       </div>
       
