--- a/homepage.html
+++ b/homepage.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="vd-roots">
-        <img src="./assets/photos/root.jpg" class="roots-img" alt="">
+        <img src="./assets/photos/helmet.jpg" class="roots-img" alt="">
         <div class="roots-cnt">
             
             <h1 class="text-left roots-txt w">Our <span class="w-bar">Roots</span></h1>
