--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="When you engage with Vedansh for your project, you can trust us on every step of the way. Right from Project Allocation all the way to Project Review and Handover, the entire process has been subdivided with milestones and checkpoints throughout, to ensure smooth and safe workflow and the assurance of quality that comes with Vedansh.">
+    <meta name="keywords" content="Cement, electricity,EPC, Engineering, Procurement, Commissioning, Project management,Plant Erection,  Testing and Commissioning, vedansh, infra, services ">
+    <meta name="author" content="vedansh infra services">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vedansh</title>
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon">
